<?xml version="1.0"?>
<package format="3">
  <name>ros2_hoverrobot_comms</name>
  <version>0.0.1</version>
  <description>Comms module for HoverRobot</description>
  <maintainer email="patricio.garces@outlook.com">Pato Garcés</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
